Fix calculation of recurring to-do start date/time, for other than the first occurrence. thanks for the patch Thomas.

BUG: 185870

svn path=/trunk/KDE/kdepimlibs/; revision=933931